--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.4",
+    "algoliasearch": "^4.22.1",
     "firebase": "^10.7.2",
     "framer-motion": "^11.0.3",
     "luxon": "^3.4.4",
